--- a/Vuejs/vue25이벤트바인딩/vue25-11.이벤트바인딩do0505.html
+++ b/Vuejs/vue25이벤트바인딩/vue25-11.이벤트바인딩do0505.html
@@ -65,3 +65,55 @@
   </body>
 
 </html>
+
+
+<!-- vue 플러그인 임포트   -->
+<script src="https://unpkg.com/vue@2.7.8/dist/vue.js">/* vue 플러그인 임포트 */</script>
+
+<script>
+
+  new Vue({
+    /* edtmc^2w */
+    el: '#app',
+    data: {
+      /* 인스턴스 안에서 사용되는 변수 등록, 공유 변수 */
+      sum1: null,
+      numInput: 0,
+      sumInput: 0,
+      sum10: 0,
+    },
+    //template: ``,
+    methods: {
+      /* 이벤트 핸들러 등록 + 일반 함수 */
+      clickBtn1(e) {
+        console.log(e.target);
+        this.$data.sum1 = this.$data.sum1 + 1;
+
+      },
+      clickBtnInput(e) {
+        console.log(e.target);
+        //문자열을 숫자로 변환
+        //v 모델지시자 화면의 입력값을 numInput에 들어간다.
+        // this.$data.numInput; //Number :문자열을 자신의 자료형에 맞게 숫자로 변경됨.
+        const val = Number(this.$data.numInput);
+        debugger;
+        this.$data.sumInput = val + this.$data.sumInput;
+      },
+
+      clickBtn10(e) {
+        //이벤트 핸들러에 인자를 넘기는 방법1
+        console.log(e.target);
+        //문자열을 숫자로 변환
+        this.$data.numInput = this.$data.numInput + this.$data.sumInput;
+        //data-num
+        let num = e.target.dataset.num;// 문자열
+        //숫자로 변환
+        num = Number(num);
+        this.$data.sum10 = this.$data.sum10 + num;
+        debugger;
+      }
+    },
+
+  });
+
+</script>
